// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render one qualifier 1`] = `
<div>
  <span
    className="badge spacer-right"
  >
    permission_template.default_for.qualifiers.DEV
  </span>
</div>
`;

exports[`should render several qualifiers 1`] = `
<div>
  <span
    className="badge spacer-right"
  >
    permission_template.default_for.qualifiers.TRK, qualifiers.VW
  </span>
</div>
`;
